--- a/BlogPhone/Pages/Auth/Registered.cshtml
+++ b/BlogPhone/Pages/Auth/Registered.cshtml
@@ -1,7 +1,9 @@
-﻿@page "{regkey}"
+﻿@page
 @model BlogPhone.Pages.RegisteredModel
 @{
     ViewData["Title"] = "Регистрация";
+    Layout = null;
 }
 
 <h1 style="text-align:center; margin-top:100px;">Поздравляем, вы успешно зарегистрировались!</h1>
+
