--- a/BlogPhone/Pages/Auth/Registered.cshtml
+++ b/BlogPhone/Pages/Auth/Registered.cshtml
@@ -5,5 +5,5 @@
     Layout = null;
 }
 
-<h1 style="text-align:center; margin-top:100px;">Поздравляем, вы успешно зарегистрировались!</h1>
+<h1 style="text-align:center; margin-top:100px;">Поздравляем, userid = @Model.UserId!</h1>
 
