--- a/BlogPhone/Pages/AboutUs.cshtml
+++ b/BlogPhone/Pages/AboutUs.cshtml
@@ -1,43 +1,40 @@
 ﻿@page
-@model IndexModel
+@model BlogPhone.Pages.AboutUsModel
 @{
     Layout = null;
 }
-@using BlogPhone.Models
-@using static BlogPhone.Models.ArticleBlog
-@using Microsoft.EntityFrameworkCore;
 
 <!DOCTYPE html>
 <html style="font-size: 16px;">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="Заголовок 6-го поста, Заголовок 5-го поста, Заголовок 4-го поста">
+    <meta name="keywords" content="About Us, About Us">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Главная</title>
+    <title>О нас</title>
     <link rel="stylesheet" href="~/css/nicepage.css" media="screen">
-<link rel="stylesheet" href="~/css/Index.css" media="screen">
+    <link rel="stylesheet" href="~/css/AboutUs.css" media="screen">
     <script class="u-script" type="text/javascript" src="~/js/jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="~/js/nicepage.js" defer=""></script>
     <meta name="generator" content="Nicepage 4.10.5, nicepage.com">
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
-
-
+    
+    
+    
     <script type="application/ld+json">{
 		"@@context": "http://schema.org",
 		"@@type": "Organization",
 		"name": "",
-		"logo": "~/images/default-logo.png"
+		"logo": "images/default-logo.png"
 }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="Главная">
+    <meta property="og:title" content="О нас">
     <meta property="og:type" content="website">
   </head>
-  <body class="u-body u-xl-mode">
-      <header class="u-clearfix u-header u-header" id="sec-3687"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+  <body class="u-body u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-3687"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a asp-page="/Index" class="u-image u-logo u-image-1" data-image-width="80" data-image-height="40">
-          <img src="images/default-logo.png" class="u-logo-image u-logo-image-1">
+          <img src="~/images/default-logo.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
@@ -94,42 +91,45 @@ else
           </div>
         </nav>
       </div></header>
-    <section class="u-align-center u-clearfix u-section-1" id="carousel_38c1">
-      <div class="u-clearfix u-sheet u-sheet-1"><!--blog--><!--blog_options_json--><!--{"type":"Recent","source":"","tags":"","count":""}--><!--/blog_options_json-->
-        <div class="u-blog u-expanded-width u-blog-1">
-          <div class="u-repeater u-repeater-1">
-              
-          @foreach(ArticleBlog articleblog in Model.Articles)
-          {
-                <!--blog_post-->
-            <div class="u-blog-post u-container-style u-repeater-item">
-                <div class="u-container-layout u-similar-container u-valign-bottom-xs u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xl u-container-layout-1">
-                <a class="u-post-header-link" asp-page="/Articles/ArticleView" asp-route-id="@articleblog.Id"><!--blog_post_image-->
-                    <img src="@Model.GetImageURLFromBytesArray(articleblog.ImageData)" alt="blog's picture" class="u-blog-control u-image u-image-default u-image-1"><!--/blog_post_image-->
-                </a>
-
-                <!--blog_post_header-->
-                <h2 class="u-blog-control u-text u-text-1">
-                    <a class="u-post-header-link" asp-page="/Articles/View" asp-route-id="@articleblog.Id">@articleblog.Label</a>
-                </h2>
-                <!--/blog_post_header-->
-
-                <!--blog_post_content-->
-                <div class="u-blog-control u-post-content u-text u-text-2">@articleblog.ShortArticleText</div><!--/blog_post_content--><!--blog_post_metadata-->
-                <div class="u-blog-control u-metadata u-metadata-1"><!--blog_post_metadata_date-->
-                    <span class="u-meta-date u-meta-icon">@articleblog.PublishDate</span><!--/blog_post_metadata_date-->
-                </div><!--/blog_post_metadata-->
-
-                <!--blog_post_readmore-->
-                <a asp-page="/Articles/View" asp-route-id="@articleblog.Id" class="u-blog-control u-border-2 u-border-grey-dark-1 u-btn u-btn-rectangle u-button-style u-none u-btn-1">Подробнее..</a>
-                <!--/blog_post_readmore-->
+    <section class="u-clearfix u-section-1" id="sec-5f19">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <div class="u-clearfix u-expanded-width u-gutter-0 u-layout-spacing-vertical u-layout-wrap u-layout-wrap-1">
+          <div class="u-layout">
+            <div class="u-layout-row">
+              <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-40 u-layout-cell-1">
+                <div class="u-container-layout u-valign-middle u-container-layout-1">
+                  <h2 class="u-text u-text-default u-text-1">About Us</h2>
+                  <p class="u-text u-text-2">Paragraph. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur id suscipit ex. Suspendisse rhoncus laoreet purus quis elementum. Phasellus sed efficitur dolor, et ultricies sapien. Quisque fringilla sit amet dolor commodo efficitur. Aliquam et sem odio. In ullamcorper nisi nunc, et molestie ipsum iaculis sit amet.</p>
                 </div>
+              </div>
+              <div class="u-container-style u-image u-layout-cell u-right-cell u-size-20 u-image-1" src="" data-image-width="256" data-image-height="256">
+                <div class="u-container-layout u-container-layout-2"></div>
+              </div>
             </div>
-            <!--/blog_post-->
-            }
-
           </div>
-        </div><!--/blog-->
+        </div>
+      </div>
+    </section>
+    <section class="u-clearfix u-section-2" id="sec-5f39">
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <div class="u-clearfix u-expanded-width u-gutter-0 u-layout-wrap u-layout-wrap-1">
+          <div class="u-layout">
+            <div class="u-layout-row">
+              <div class="u-align-center u-container-style u-layout-cell u-left-cell u-size-23 u-layout-cell-1">
+                <div class="u-container-layout u-valign-middle u-container-layout-1">
+                  <div alt="" class="u-image u-image-circle u-image-1" src="" data-image-width="256" data-image-height="256"></div>
+                </div>
+              </div>
+              <div class="u-align-left u-container-style u-layout-cell u-right-cell u-size-37 u-layout-cell-2">
+                <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-valign-top-xs u-container-layout-2">
+                  <h2 class="u-text u-text-default u-text-1">About Us</h2>
+                  <p class="u-text u-text-2">Paragraph. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur id suscipit ex. Suspendisse rhoncus laoreet purus quis elementum. Phasellus sed efficitur dolor, et ultricies sapien. Quisque fringilla sit amet dolor commodo efficitur. Aliquam et sem odio. In ullamcorper nisi nunc, et molestie ipsum iaculis sit amet.</p>
+                  <a href="" class="u-btn u-button-style u-btn-1">Button</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     
