--- a/BlogPhone/Pages/_ViewImports.cshtml
+++ b/BlogPhone/Pages/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using BlogPhone
+@using BlogPhone.Models
+@using Microsoft.EntityFrameworkCore;
 @namespace BlogPhone.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
