fixes, new pages, admin working, auth working

--- a/BlogPhone/Pages/Auth/Login.cshtml
+++ b/BlogPhone/Pages/Auth/Login.cshtml
@@ -101,7 +101,7 @@
             </div>
           </form>
         </div>
-        <a class="u-border-1 u-border-active-palette-2-base u-border-hover-palette-3-dark-2 u-btn u-button-style u-none u-text-palette-3-dark-1 u-btn-2" asp-page="auth/register">Зарегистрироваться</a>
+        <a class="u-border-1 u-border-active-palette-2-base u-border-hover-palette-3-dark-2 u-btn u-button-style u-none u-text-palette-3-dark-1 u-btn-2" asp-page="/auth/register">Зарегистрироваться</a>
         </div>
     </section>
     
