--- a/BlogPhone/Pages/Admin/Heads.cshtml
+++ b/BlogPhone/Pages/Admin/Heads.cshtml
@@ -61,7 +61,7 @@
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-3"><li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/index">Главное</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/rates">Тарифы</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/aboutUs">О нас</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" style="color:red" asp-page="/admin/panel">Панель</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/admin/panel">Панель</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/office/user">@Model.SiteUser!.Email</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-4"><li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/auth/logout">Выход</a>
 </li></ul>
 </div>
